<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Power button" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register" />

        <android.inputmethodservice.ExtractEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/social_media" />

        <MediaController
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </MediaController>

        <NumberPicker
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextSwitcher
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>
        </TextSwitcher>
    </LinearLayout>
</ScrollView>